--- a/Day2.ipynb
+++ b/Day2.ipynb
@@ -28,7 +28,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('E:\\DAY2\\Data\\data.csv') \n",
+    "df = pd.read_csv('E:\\DAY2\\Data\\data.csv')\n",
     "print(df)"
    ]
   },
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a program to print dimension of data set"
+    "Write a program to print dimension of data set\n"
    ]
   },
   {
@@ -55,7 +55,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('E:\\DAY2\\Data\\\\nba.csv') \n",
+    "df = pd.read_csv('E:\\DAY2\\Data\\\\nba.csv')\n",
     "print(df.shape)"
    ]
   },
@@ -74,7 +74,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(\"E:\\DAY2\\Data\\data.csv\") \n",
+    "df = pd.read_csv(\"E:\\DAY2\\Data\\data.csv\")\n",
     "print(df.size)"
    ]
   },
@@ -285,7 +285,7 @@
     }
    ],
    "source": [
-    "import pandas as pd \n",
+    "import pandas as pd\n",
     "df = pd.read_csv('E:\\DAY2\\Data\\data.csv')\n",
     "df.head(20)"
    ]
@@ -732,7 +732,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a program to the entire data frame using csv file churn modelling and aslo print size and shape"
+    "Write a program to the entire data frame using csv file churn modelling and aslo print size and shape\n"
    ]
   },
   {
@@ -10751,7 +10751,7 @@
     }
    ],
    "source": [
-    "import pandas as pd \n",
+    "import pandas as pd\n",
     "df = pd.read_csv('E:\\DAY2\\Data\\churn modelling.csv')\n",
     "print(df.to_string())\n",
     "print(df.size)\n",
@@ -10806,7 +10806,7 @@
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv('E:\\DAY2\\Data\\Date1.csv')\n",
-    "df[\"Calories\"].fillna(130, inplace = True)\n",
+    "df[\"Calories\"].fillna(130, inplace=True)\n",
     "print(df.to_string())"
    ]
   },
@@ -10858,7 +10858,7 @@
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv('E:\\DAY2\\Data\\Date1.csv')\n",
-    "df.fillna(130, inplace = True)\n",
+    "df.fillna(130, inplace=True)\n",
     "print(df.to_string())"
    ]
   },
@@ -10867,7 +10867,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a pandas program to create a line plot of the opening , closing stock price of alphabet inc. between two specefic dates use the alphabet_stock_data.csv file to  extract data"
+    "Write a pandas program to create a line plot of the opening , closing stock price of alphabet inc. between two specefic dates use the alphabet_stock_data.csv file to extract data\n"
    ]
   },
   {
@@ -10921,8 +10921,8 @@
     "df['Date'] = pd.to_datetime(df['Date'])\n",
     "start_date = '2017-01-01'\n",
     "end_date = '2017-01-31'\n",
-    "filtered_df = df[(df['Date']>= start_date) & (df['Date']<= end_date)]\n",
-    "# Extract the requries coloum \n",
+    "filtered_df = df[(df['Date'] >= start_date) & (df['Date'] <= end_date)]\n",
+    "# Extract the requries coloum\n",
     "dates = filtered_df['Date']\n",
     "opening_prices = filtered_df['Open']\n",
     "closing_prices = filtered_df['Close']\n",
@@ -10933,8 +10933,7 @@
     "plt.ylabel('Price')\n",
     "plt.xticks(rotation=45)\n",
     "plt.legend()\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
@@ -10954,8 +10953,8 @@
    ],
    "source": [
     "import numpy as np\n",
-    "arr = np.array([[1,2,3,4,],[5,6,7,8],[9,10,11,12]])\n",
-    "new_arr=arr*3\n",
+    "arr = np.array([[1, 2, 3, 4,], [5, 6, 7, 8], [9, 10, 11, 12]])\n",
+    "new_arr = arr*3\n",
     "print(new_arr)"
    ]
   },
@@ -10975,7 +10974,7 @@
    ],
    "source": [
     "import numpy as np\n",
-    "arr =  np.array([1,2,3,4,5])\n",
+    "arr = np.array([1, 2, 3, 4, 5])\n",
     "print(arr)\n",
     "print(type(arr))"
    ]
@@ -10996,9 +10995,9 @@
    ],
    "source": [
     "import numpy as np\n",
-    "matrix1 = np.array([[10,20,30],[40,50,60]])\n",
-    "matrix2 = np.array([[7,8],[9,10],[11,12]])\n",
-    "result = np.dot(matrix1,matrix2)\n",
+    "matrix1 = np.array([[10, 20, 30], [40, 50, 60]])\n",
+    "matrix2 = np.array([[7, 8], [9, 10], [11, 12]])\n",
+    "result = np.dot(matrix1, matrix2)\n",
     "print(result)"
    ]
   },
@@ -11039,16 +11038,16 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "list_data = [10,20,30,40,50]\n",
+    "list_data = [10, 20, 30, 40, 50]\n",
     "list_series = pd.Series(list_data)\n",
     "print('series from list')\n",
     "print(list_series)\n",
-    "array_data = np.array([0.5,0.8,1.2,1.5,2.0])\n",
+    "array_data = np.array([0.5, 0.8, 1.2, 1.5, 2.0])\n",
     "array_series = pd.Series(array_data)\n",
     "print('\\nSeries from numpy array:')\n",
     "print(array_series)\n",
-    "#craete series from dict\n",
-    "dict_data = {'A':100,'B':200,'C':300,'D':400}\n",
+    "# craete series from dict\n",
+    "dict_data = {'A': 100, 'B': 200, 'C': 300, 'D': 400}\n",
     "dict_series = pd.Series(dict_data)\n",
     "print('\\nSeries from dict:')\n",
     "print(dict_series)"
@@ -11069,7 +11068,7 @@
    ],
    "source": [
     "import numpy as np\n",
-    "a=np.array([[1,2,3],[4,5,6]])\n",
+    "a = np.array([[1, 2, 3], [4, 5, 6]])\n",
     "print(a.shape)"
    ]
   },
@@ -11090,8 +11089,8 @@
    ],
    "source": [
     "import numpy as np\n",
-    "a=np.array([[1,2,3],[4,5,6]])\n",
-    "a.shape=(3,2)\n",
+    "a = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "a.shape = (3, 2)\n",
     "print(a)"
    ]
   },
@@ -11113,8 +11112,8 @@
    ],
    "source": [
     "import pandas\n",
-    "mydataset = {'cars':['BMW','Volvo','Ford'],'passings':[3,7,2]}\n",
-    "myvar=pandas.DataFrame(mydataset)\n",
+    "mydataset = {'cars': ['BMW', 'Volvo', 'Ford'], 'passings': [3, 7, 2]}\n",
+    "myvar = pandas.DataFrame(mydataset)\n",
     "print(myvar)"
    ]
   },
@@ -11136,8 +11135,8 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "a=[1,7,2]\n",
-    "myvar=pd.Series(a)\n",
+    "a = [1, 7, 2]\n",
+    "myvar = pd.Series(a)\n",
     "print(myvar)"
    ]
   },
@@ -11160,8 +11159,8 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "a=[1,7,2]\n",
-    "myvar=pd.Series(a,index=['x','y','z'])\n",
+    "a = [1, 7, 2]\n",
+    "myvar = pd.Series(a, index=['x', 'y', 'z'])\n",
     "print(myvar)\n",
     "print(myvar['y'])"
    ]
@@ -11184,8 +11183,8 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "calories={'day1':420,'day2':380,'day3':390}\n",
-    "myvar=pd.Series(calories)\n",
+    "calories = {'day1': 420, 'day2': 380, 'day3': 390}\n",
+    "myvar = pd.Series(calories)\n",
     "print(myvar)"
    ]
   },
@@ -11207,8 +11206,8 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "data={'calories':[420,380,390],'durations':[50,40,45]}\n",
-    "myvar=pd.DataFrame(data)\n",
+    "data = {'calories': [420, 380, 390], 'durations': [50, 40, 45]}\n",
+    "myvar = pd.DataFrame(data)\n",
     "print(myvar)"
    ]
   },
@@ -11229,8 +11228,8 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "data={'calories':[420,380,390],'durations':[50,40,45]}\n",
-    "myvar=pd.DataFrame(data)\n",
+    "data = {'calories': [420, 380, 390], 'durations': [50, 40, 45]}\n",
+    "myvar = pd.DataFrame(data)\n",
     "print(myvar.loc[0])"
    ]
   },
@@ -11252,8 +11251,8 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "data={'calories':[420,380,390],'durations':[50,40,45]}\n",
-    "df=pd.DataFrame(data,index=['day1','day2','day3'])\n",
+    "data = {'calories': [420, 380, 390], 'durations': [50, 40, 45]}\n",
+    "df = pd.DataFrame(data, index=['day1', 'day2', 'day3'])\n",
     "print(df)"
    ]
   },
@@ -11272,11 +11271,13 @@
    ],
    "source": [
     "def fact(n):\n",
-    "    if n==0 or n==1:\n",
+    "    if n == 0 or n == 1:\n",
     "        return 1\n",
     "    else:\n",
     "        return n*fact(n-1)\n",
-    "a=fact(6)\n",
+    "\n",
+    "\n",
+    "a = fact(6)\n",
     "print(a)"
    ]
   }
