--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -18,9 +18,9 @@
    ],
    "source": [
     "from matplotlib import pyplot\n",
-    "roll_num = [1,2,3,4,5,6,7,8,9]\n",
-    "marks = [55,75,96,75,36,45,87,99,100]\n",
-    "pyplot.plot(roll_num,marks,'b')\n",
+    "roll_num = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "marks = [55, 75, 96, 75, 36, 45, 87, 99, 100]\n",
+    "pyplot.plot(roll_num, marks, 'b')\n",
     "pyplot.show()"
    ]
   },
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scatter Graph"
+    "Scatter Graph\n"
    ]
   },
   {
@@ -50,9 +50,9 @@
    ],
    "source": [
     "from matplotlib import pyplot\n",
-    "roll_num = [1,2,3,4,5,6,7,8,9]\n",
-    "marks = [55,75,96,75,36,45,87,99,100]\n",
-    "pyplot.scatter(roll_num,marks)\n",
+    "roll_num = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "marks = [55, 75, 96, 75, 36, 45, 87, 99, 100]\n",
+    "pyplot.scatter(roll_num, marks)\n",
     "pyplot.show()"
    ]
   },
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Histogram"
+    "Histogram\n"
    ]
   },
   {
@@ -82,8 +82,8 @@
    ],
    "source": [
     "from matplotlib import pyplot\n",
-    "marks = [55,75,96,75,36,45,87,99,100]\n",
-    "pyplot.hist(marks,bins = 7)\n",
+    "marks = [55, 75, 96, 75, 36, 45, 87, 99, 100]\n",
+    "pyplot.hist(marks, bins=7)\n",
     "pyplot.show()"
    ]
   },
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bar chart"
+    "Bar chart\n"
    ]
   },
   {
@@ -114,10 +114,10 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot\n",
-    "city = ('Pune','Etawah','Meerut','Gorakhpur','Prayagraj','Bhopal')\n",
+    "city = ('Pune', 'Etawah', 'Meerut', 'Gorakhpur', 'Prayagraj', 'Bhopal')\n",
     "y_val = np.arange(len(city))\n",
-    "rank = [4,7,1,3,2,5]\n",
-    "pyplot.bar(y_val,rank,align='center')\n",
+    "rank = [4, 7, 1, 3, 2, 5]\n",
+    "pyplot.bar(y_val, rank, align='center')\n",
     "pyplot.xticks(y_val, city)\n",
     "pyplot.ylabel('Rank')\n",
     "pyplot.title('City')\n",
@@ -142,12 +142,12 @@
    ],
    "source": [
     "from matplotlib import pyplot\n",
-    "roll_num = [1,2,3,4,5,6,7,8,9]\n",
-    "marks = [55,75,96,75,36,45,87,99,100]\n",
-    "attendace = [25,75,86,74,85,25,35,63,29]\n",
-    "pyplot.plot(roll_num,marks,color = 'green', label = 'Marks')\n",
-    "pyplot.plot(roll_num,attendace,color = 'blue', label = 'Attendance')\n",
-    "pyplot.legend(loc='upper left',frameon=True)\n",
+    "roll_num = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "marks = [55, 75, 96, 75, 36, 45, 87, 99, 100]\n",
+    "attendace = [25, 75, 86, 74, 85, 25, 35, 63, 29]\n",
+    "pyplot.plot(roll_num, marks, color='green', label='Marks')\n",
+    "pyplot.plot(roll_num, attendace, color='blue', label='Attendance')\n",
+    "pyplot.legend(loc='upper left', frameon=True)\n",
     "pyplot.show()"
    ]
   },
@@ -156,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pie chart "
+    "Pie chart\n"
    ]
   },
   {
@@ -178,11 +178,12 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot\n",
-    "city = ('Pune','Etawah','Meerut','Gorakhpur','Prayagraj','Bhopal')\n",
-    "rank = [4,7,1,3,2,5]\n",
-    "explode = (0.2,0,0,0,0,0)\n",
-    "colors = ['yellowgreen','pink','purple','grey','red','orange']\n",
-    "pyplot.pie(rank,explode=explode,labels=city,colors=colors,autopct='%1.1f%%',shadow=True,startangle=120)\n",
+    "city = ('Pune', 'Etawah', 'Meerut', 'Gorakhpur', 'Prayagraj', 'Bhopal')\n",
+    "rank = [4, 7, 1, 3, 2, 5]\n",
+    "explode = (0.2, 0, 0, 0, 0, 0)\n",
+    "colors = ['yellowgreen', 'pink', 'purple', 'grey', 'red', 'orange']\n",
+    "pyplot.pie(rank, explode=explode, labels=city, colors=colors,\n",
+    "           autopct='%1.1f%%', shadow=True, startangle=120)\n",
     "pyplot.axis('equal')\n",
     "pyplot.show()"
    ]
@@ -206,11 +207,12 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot\n",
-    "Party = ('MODI','BHUVI','PRATHAM','MAYAWATI','MAMTA','YOGI')\n",
-    "rank = [6,7,1,5,2,3]\n",
-    "explode = (0.2,0,0,0,0,0)\n",
-    "colors = ['yellowgreen','pink','purple','grey','red','orange']\n",
-    "pyplot.pie(rank,explode=explode,labels=Party,colors=colors,autopct='%1.1f%%',shadow=True,startangle=120)\n",
+    "Party = ('MODI', 'BHUVI', 'PRATHAM', 'MAYAWATI', 'MAMTA', 'YOGI')\n",
+    "rank = [6, 7, 1, 5, 2, 3]\n",
+    "explode = (0.2, 0, 0, 0, 0, 0)\n",
+    "colors = ['yellowgreen', 'pink', 'purple', 'grey', 'red', 'orange']\n",
+    "pyplot.pie(rank, explode=explode, labels=Party, colors=colors,\n",
+    "           autopct='%1.1f%%', shadow=True, startangle=120)\n",
     "pyplot.axis('equal')\n",
     "pyplot.show()"
    ]
@@ -220,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make a 3d class , name employee and take the data of 5 employees"
+    "Make a 3d class , name employee and take the data of 5 employees\n"
    ]
   },
   {
@@ -250,6 +252,7 @@
     "        self.age = age\n",
     "        self.salary = salary\n",
     "\n",
+    "\n",
     "# Create instances of the Employee class for five employees\n",
     "employee1 = Employee(\"John Doe\", 30, 50000)\n",
     "employee2 = Employee(\"Jane Smith\", 35, 60000)\n",
@@ -268,7 +271,7 @@
     "print(\"Age:\", employee2.age)\n",
     "print(\"Salary:\", employee2.salary)\n",
     "\n",
-    "# ... and so on for employee3, employee4, and employee5\n"
+    "# ... and so on for employee3, employee4, and employee5"
    ]
   },
   {
@@ -289,9 +292,9 @@
    ],
    "source": [
     "from matplotlib import pyplot as plt\n",
-    "x=[1,2,3,4,5,6,7,8,9]\n",
-    "y=[55,75,96,75,36,45,87,99,100]\n",
-    "plt.plot(x,y,'r')\n",
+    "x = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "y = [55, 75, 96, 75, 36, 45, 87, 99, 100]\n",
+    "plt.plot(x, y, 'r')\n",
     "plt.xlabel('X Axias title here')\n",
     "plt.ylabel('Y Axias title here')\n",
     "plt.title('sytring title here')\n",
@@ -316,11 +319,11 @@
    ],
    "source": [
     "from matplotlib import pyplot as plt\n",
-    "plt.subplot(1,2,1)\n",
-    "plt.plot(x,y,'r--')\n",
-    "plt.subplot(1,2,2)\n",
-    "plt.plot(y,x,'g*-')\n",
-    "plt.show()\n"
+    "plt.subplot(1, 2, 1)\n",
+    "plt.plot(x, y, 'r--')\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.plot(y, x, 'g*-')\n",
+    "plt.show()"
    ]
   },
   {
@@ -340,7 +343,7 @@
     "import numpy as np\n",
     "from scipy.sparse.csgraph import connected_components\n",
     "from scipy.sparse import csr_matrix\n",
-    "arr = np.array([[0,1,2],[1,0,0],[2,0,0]])\n",
+    "arr = np.array([[0, 1, 2], [1, 0, 0], [2, 0, 0]])\n",
     "newarr = csr_matrix(arr)\n",
     "print(connected_components(newarr))"
    ]
@@ -350,7 +353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Find the shortest path from source to all using vertex dijkstra algo."
+    "Find the shortest path from source to all using vertex dijkstra algo.\n"
    ]
   },
   {
@@ -370,9 +373,9 @@
     "import numpy as np\n",
     "from scipy.sparse.csgraph import dijkstra\n",
     "from scipy.sparse import csr_matrix\n",
-    "arr = np.array([[0,1,2],[1,0,0],[2,0,0]])\n",
+    "arr = np.array([[0, 1, 2], [1, 0, 0], [2, 0, 0]])\n",
     "newarr = csr_matrix(arr)\n",
-    "print(dijkstra(newarr,return_predecessors=True,indices=0))"
+    "print(dijkstra(newarr, return_predecessors=True, indices=0))"
    ]
   },
   {
@@ -380,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Floyd Warshall Algo"
+    "Floyd Warshall Algo\n"
    ]
   },
   {
@@ -404,9 +407,9 @@
     "import numpy as np\n",
     "from scipy.sparse.csgraph import floyd_warshall\n",
     "from scipy.sparse import csr_matrix\n",
-    "arr=np.array([[0,1,2],[1,0,0],[2,0,0]])\n",
+    "arr = np.array([[0, 1, 2], [1, 0, 0], [2, 0, 0]])\n",
     "newarr = csr_matrix(arr)\n",
-    "print(floyd_warshall(newarr,return_predecessors=True))"
+    "print(floyd_warshall(newarr, return_predecessors=True))"
    ]
   },
   {
@@ -452,19 +455,19 @@
     }
    ],
    "source": [
-    "import pandas as pd \n",
+    "import pandas as pd\n",
     "import numpy as np\n",
-    "list_data = [10,20,30,40,50]\n",
+    "list_data = [10, 20, 30, 40, 50]\n",
     "list_series = pd.Series(list_data)\n",
     "print(\"Series from list\")\n",
     "print(list_series)\n",
-    "array_data = np.array([0.5,0.8,1.2,1.5])\n",
+    "array_data = np.array([0.5, 0.8, 1.2, 1.5])\n",
     "array_series = pd.Series(array_data)\n",
     "\n",
     "print(\"\\nSeries from numpyarray:\")\n",
     "print(array_series)\n",
-    "dict_data = {'A':100,'B':200,'C':300,'D':400}\n",
-    "dict_series= pd.Series(dict_data)\n",
+    "dict_data = {'A': 100, 'B': 200, 'C': 300, 'D': 400}\n",
+    "dict_series = pd.Series(dict_data)\n",
     "print(\"\\nSeriesfrom dictionary\")\n",
     "print(dict_series)"
    ]
@@ -474,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write program to count number of missing value in each column."
+    "Write program to count number of missing value in each column.\n"
    ]
   },
   {
@@ -495,7 +498,8 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "data = {'Coloum1':[1,2,3,None,5],'Column2':[6,None,8,9,10],'Column3':[11,12,None,14,15]}\n",
+    "data = {'Coloum1': [1, 2, 3, None, 5], 'Column2': [\n",
+    "    6, None, 8, 9, 10], 'Column3': [11, 12, None, 14, 15]}\n",
     "df = pd.DataFrame(data)\n",
     "print(df.isnull().sum(axis=0))"
    ]
@@ -505,7 +509,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remove the all null valve from the  data set"
+    "Remove the all null valve from the data set\n"
    ]
   },
   {
