--- a/Day4.ipynb
+++ b/Day4.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bellman Ford "
+    "Bellman Ford\n"
    ]
   },
   {
@@ -25,9 +25,9 @@
     "import numpy as np\n",
     "from scipy.sparse.csgraph import bellman_ford\n",
     "from scipy.sparse import csr_matrix\n",
-    "arr=np.array([[0,1,2],[1,0,0],[2,0,0]])\n",
+    "arr = np.array([[0, 1, 2], [1, 0, 0], [2, 0, 0]])\n",
     "newarr = csr_matrix(arr)\n",
-    "print(bellman_ford(newarr,return_predecessors=True,indices=0))"
+    "print(bellman_ford(newarr, return_predecessors=True, indices=0))"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Seaborn"
+    "Seaborn\n"
    ]
   },
   {
@@ -76,7 +76,7 @@
     "import matplotlib.pyplot as plt\n",
     "c = pandas.read_csv(r'E:\\DAY2\\Data\\Book1.csv')\n",
     "print(c)\n",
-    "res = seaborn.scatterplot(x = 'Name', y = 'Age',data = c)\n",
+    "res = seaborn.scatterplot(x='Name', y='Age', data=c)\n",
     "plt.show()"
    ]
   },
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inbuilt data set of sea born"
+    "Inbuilt data set of sea born\n"
    ]
   },
   {
@@ -117,9 +117,8 @@
    "source": [
     "import seaborn\n",
     "seaborn.set(style='whitegrid')\n",
-    "fmri=seaborn.load_dataset('fmri')\n",
-    "seaborn.scatterplot(x='timepoint',y='signal',data=fmri)\n",
-    "\n"
+    "fmri = seaborn.load_dataset('fmri')\n",
+    "seaborn.scatterplot(x='timepoint', y='signal', data=fmri)"
    ]
   },
   {
@@ -127,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Seaborn line.plot"
+    "Seaborn line.plot\n"
    ]
   },
   {
@@ -159,8 +158,8 @@
    "source": [
     "import seaborn\n",
     "seaborn.set(style='whitegrid')\n",
-    "fmri=seaborn.load_dataset('fmri')\n",
-    "seaborn.lineplot(x='timepoint',y='signal',data=fmri)"
+    "fmri = seaborn.load_dataset('fmri')\n",
+    "seaborn.lineplot(x='timepoint', y='signal', data=fmri)"
    ]
   },
   {
@@ -201,7 +200,7 @@
     "import matplotlib.pyplot as plt\n",
     "c = pandas.read_csv(r'E:\\DAY2\\Data\\Book1.csv')\n",
     "print(c)\n",
-    "res = seaborn.lineplot(x = 'Name', y = 'Age',data = c)\n",
+    "res = seaborn.lineplot(x='Name', y='Age', data=c)\n",
     "plt.show()"
    ]
   },
@@ -210,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Categorical Scatter plot"
+    "Categorical Scatter plot\n"
    ]
   },
   {
@@ -234,7 +233,7 @@
     "import pandas\n",
     "import matplotlib.pyplot as plt\n",
     "csv = seaborn.load_dataset(\"tips\")\n",
-    "res=seaborn.stripplot(x=\"tip\",y=\"sex\",data=csv,jitter=0.05)\n",
+    "res = seaborn.stripplot(x=\"tip\", y=\"sex\", data=csv, jitter=0.05)\n",
     "plt.show()"
    ]
   },
@@ -272,7 +271,7 @@
     "import matplotlib.pyplot as plt\n",
     "c = pandas.read_csv(r'E:\\DAY2\\Data\\Book2.csv')\n",
     "print(c)\n",
-    "res = seaborn.catplot(x = 'total_bill', y = 'sex',data = c)\n",
+    "res = seaborn.catplot(x='total_bill', y='sex', data=c)\n",
     "plt.show()"
    ]
   },
@@ -310,7 +309,7 @@
     "import matplotlib.pyplot as plt\n",
     "c = pandas.read_csv(r'E:\\DAY2\\Data\\Book2.csv')\n",
     "print(c)\n",
-    "res = seaborn.stripplot(x = 'total_bill', y = 'sex',data = c)\n",
+    "res = seaborn.stripplot(x='total_bill', y='sex', data=c)\n",
     "plt.show()"
    ]
   },
@@ -336,7 +335,7 @@
     "import tkinter as tk\n",
     "r = tk.Tk()\n",
     "r.title('Rachit Tyagi')\n",
-    "button=tk.Button(text='Stop',width=25,command=r.destroy)\n",
+    "button = tk.Button(text='Stop', width=25, command=r.destroy)\n",
     "button.pack()\n",
     "r.mainloop()"
    ]
@@ -352,9 +351,13 @@
     "from tkinter import messagebox\n",
     "top = tkinter.Tk()\n",
     "top.title(\"Rachit Tyagi\")\n",
+    "\n",
+    "\n",
     "def helloCallBack():\n",
-    "    messagebox.showinfo(\"Hello Python\",\"Hello World\")\n",
-    "B=tkinter.Button(top,text=\"Hello\",command=helloCallBack)\n",
+    "    messagebox.showinfo(\"Hello Python\", \"Hello World\")\n",
+    "\n",
+    "\n",
+    "B = tkinter.Button(top, text=\"Hello\", command=helloCallBack)\n",
     "B.pack()\n",
     "top.mainloop()"
    ]
@@ -364,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Line"
+    "Line\n"
    ]
   },
   {
@@ -376,12 +379,12 @@
     "from tkinter import *\n",
     "master = Tk()\n",
     "master.title(\"Rachit Tyagi\")\n",
-    "w=Canvas(master,width=40,height=60)\n",
+    "w = Canvas(master, width=40, height=60)\n",
     "w.pack()\n",
-    "canvas_height=20\n",
-    "canvas_width=200\n",
-    "y=int(canvas_height/2)\n",
-    "w.create_line(0,y,canvas_width,y)\n",
+    "canvas_height = 20\n",
+    "canvas_width = 200\n",
+    "y = int(canvas_height/2)\n",
+    "w.create_line(0, y, canvas_width, y)\n",
     "mainloop()"
    ]
   },
@@ -394,12 +397,12 @@
     "from tkinter import *\n",
     "master = Tk()\n",
     "master.title(\"Rachit Tyagi\")\n",
-    "w=Canvas(master,width=2000,height=200,bg='black')\n",
+    "w = Canvas(master, width=2000, height=200, bg='black')\n",
     "w.pack()\n",
-    "canvas_height=20\n",
-    "canvas_width=200\n",
-    "y=int(canvas_height/2)\n",
-    "w.create_line(0,y,canvas_width,y)\n",
+    "canvas_height = 20\n",
+    "canvas_width = 200\n",
+    "y = int(canvas_height/2)\n",
+    "w.create_line(0, y, canvas_width, y)\n",
     "mainloop()"
    ]
   },
@@ -408,7 +411,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Oval"
+    "Oval\n"
    ]
   },
   {
@@ -420,9 +423,9 @@
     "from tkinter import *\n",
     "master = Tk()\n",
     "master.title(\"Rachit Tyagi\")\n",
-    "w=Canvas(master,width=400,height=400)\n",
+    "w = Canvas(master, width=400, height=400)\n",
     "w.pack()\n",
-    "w.create_oval(50,50,150,100,width=2,fill='red')\n",
+    "w.create_oval(50, 50, 150, 100, width=2, fill='red')\n",
     "mainloop()"
    ]
   },
@@ -431,7 +434,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Rectangle "
+    "Rectangle\n"
    ]
   },
   {
@@ -443,9 +446,9 @@
     "from tkinter import *\n",
     "master = Tk()\n",
     "master.title(\"Rachit Tyagi\")\n",
-    "w=Canvas(master,width=400,height=400)\n",
+    "w = Canvas(master, width=400, height=400)\n",
     "w.pack()\n",
-    "w.create_rectangle(50,50,150,100,width=2,fill='yellow')\n",
+    "w.create_rectangle(50, 50, 150, 100, width=2, fill='yellow')\n",
     "mainloop()"
    ]
   },
@@ -456,21 +459,30 @@
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
+    "\n",
+    "\n",
     "def draw_line():\n",
-    "    canvas.create_line(50,50,200,50,fill='red')\n",
+    "    canvas.create_line(50, 50, 200, 50, fill='red')\n",
+    "\n",
+    "\n",
     "def draw_rectangle():\n",
-    "    canvas.create_rectangle(50,100,200,200,fill='blue')\n",
+    "    canvas.create_rectangle(50, 100, 200, 200, fill='blue')\n",
+    "\n",
+    "\n",
     "def draw_oval():\n",
-    "    canvas.create_oval(50,250,200,300,fill='green')\n",
+    "    canvas.create_oval(50, 250, 200, 300, fill='green')\n",
+    "\n",
+    "\n",
     "window = tk.Tk()\n",
     "window.title('Drawing Shapes')\n",
-    "canvas = tk.Canvas(window,width=250,height=400)\n",
+    "canvas = tk.Canvas(window, width=250, height=400)\n",
     "canvas.pack()\n",
-    "line_button=tk.Button(window,text='Draw Line',command=draw_line)\n",
+    "line_button = tk.Button(window, text='Draw Line', command=draw_line)\n",
     "line_button.pack()\n",
-    "rectangle_button = tk.Button(window,text='Draw Rectangle',command=draw_rectangle)\n",
+    "rectangle_button = tk.Button(\n",
+    "    window, text='Draw Rectangle', command=draw_rectangle)\n",
     "rectangle_button.pack()\n",
-    "oval_button = tk.Button(window,text='Draw Oval',command=draw_oval)\n",
+    "oval_button = tk.Button(window, text='Draw Oval', command=draw_oval)\n",
     "oval_button.pack()\n",
     "window.mainloop()"
    ]
