--- a/Rachit Tyagi 0221csml211.ipynb
+++ b/Rachit Tyagi 0221csml211.ipynb
@@ -6,7 +6,7 @@
    "id": "20ee7f8d",
    "metadata": {},
    "source": [
-    "Rachit Tyagi , 0221csml211 , AIML - C"
+    "Rachit Tyagi , 0221csml211 , AIML - C\n"
    ]
   },
   {
@@ -15,11 +15,10 @@
    "id": "0b4b6b06",
    "metadata": {},
    "source": [
-    "\n",
     "Import numpy as np # create numpy\n",
-    "array arr = np.array([1, 2, 4, 5, 6]) #flipud method for reversing reverse_\n",
+    "array arr = np.array([1, 2, 4, 5, 6]) #flipud method for reversing reverse\\_\n",
     "arr = np.flipud(arr)\n",
-    "print(reverse_arr)"
+    "print(reverse_arr)\n"
    ]
   },
   {
@@ -38,7 +37,7 @@
    ],
    "source": [
     "import numpy as np\n",
-    "arr = np.array([1, 2, 4, 5, 6])  \n",
+    "arr = np.array([1, 2, 4, 5, 6])\n",
     "reverse_arr = np.flipud(arr)\n",
     "print(reverse_arr)"
    ]
@@ -49,11 +48,10 @@
    "id": "a3c62d22",
    "metadata": {},
    "source": [
-    "\n",
-    "Create a class named as Student to store the rollno, name and marks in three subjects. Use List to store the marks. \n",
+    "Create a class named as Student to store the rollno, name and marks in three subjects. Use List to store the marks.\n",
     "a) Write an instance method called compute() to compute total marks and\n",
-    "average marks of a student. \n",
-    "b) Write a method called display() to display student information"
+    "average marks of a student.\n",
+    "b) Write a method called display() to display student information\n"
    ]
   },
   {
@@ -75,21 +73,25 @@
    ],
    "source": [
     "class Student:\n",
-    "    l =[]\n",
-    "    def __init__(self,rollno,name,m1,m2,m3):\n",
+    "    l = []\n",
+    "\n",
+    "    def __init__(self, rollno, name, m1, m2, m3):\n",
     "        self.rollno = rollno\n",
     "        self.name = name\n",
-    "        self.l = [m1,m2,m3]\n",
-    "        \n",
+    "        self.l = [m1, m2, m3]\n",
+    "\n",
     "    def compute(self):\n",
     "        self.total_marks = sum(self.l)\n",
     "        self.avg = self.total_marks/3\n",
+    "\n",
     "    def display(self):\n",
-    "        print('Name :',self.name)\n",
-    "        print('Roll No.:',self.rollno)\n",
-    "        print('Total Marks:',self.total_marks)\n",
-    "        print('Average of Marks',self.avg)\n",
-    "P = Student(1,'Ram',89,90,97)\n",
+    "        print('Name :', self.name)\n",
+    "        print('Roll No.:', self.rollno)\n",
+    "        print('Total Marks:', self.total_marks)\n",
+    "        print('Average of Marks', self.avg)\n",
+    "\n",
+    "\n",
+    "P = Student(1, 'Ram', 89, 90, 97)\n",
     "P.compute()\n",
     "P.display()"
    ]
@@ -100,8 +102,7 @@
    "id": "57bd585d",
    "metadata": {},
    "source": [
-    "\n",
-    "Write a program to demonstrate hybrid inheritance and show MRO for each class"
+    "Write a program to demonstrate hybrid inheritance and show MRO for each class\n"
    ]
   },
   {
@@ -128,28 +129,32 @@
    ],
    "source": [
     "class Vehicle:\n",
-    "  def __init__(self,name):\n",
-    "    print(name,'is a vehicle')\n",
+    "    def __init__(self, name):\n",
+    "        print(name, 'is a vehicle')\n",
+    "\n",
     "\n",
     "class Run(Vehicle):\n",
-    "  def __init__(self,name):\n",
-    "    print(name,'can run')\n",
-    "    super().__init__(name)\n",
-    "    \n",
-    "class Fly(Vehicle):\n",
-    "  def __init__(self,name):\n",
-    "    print(name,'can fly')\n",
-    "    super().__init__(name)\n",
+    "    def __init__(self, name):\n",
+    "        print(name, 'can run')\n",
+    "        super().__init__(name)\n",
     "\n",
-    "class Both(Run,Fly):\n",
-    "  def __init__(self,name):\n",
-    "    super().__init__(name)\n",
+    "\n",
+    "class Fly(Vehicle):\n",
+    "    def __init__(self, name):\n",
+    "        print(name, 'can fly')\n",
+    "        super().__init__(name)\n",
+    "\n",
+    "\n",
+    "class Both(Run, Fly):\n",
+    "    def __init__(self, name):\n",
+    "        super().__init__(name)\n",
+    "\n",
     "\n",
     "V = Both('mig')\n",
     "print(Both.mro())\n",
     "print(Fly.mro())\n",
     "print(Run.mro())\n",
-    "print(Vehicle.mro())\n"
+    "print(Vehicle.mro())"
    ]
   },
   {
@@ -158,7 +163,7 @@
    "id": "de71a785",
    "metadata": {},
    "source": [
-    "Write a program to draw colored shapes (line, rectangle, oval) on canvas."
+    "Write a program to draw colored shapes (line, rectangle, oval) on canvas.\n"
    ]
   },
   {
@@ -169,26 +174,34 @@
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
+    "\n",
+    "\n",
     "def draw_line():\n",
-    "    canvas.create_line(50,50,200,50,fill = 'red')\n",
+    "    canvas.create_line(50, 50, 200, 50, fill='red')\n",
+    "\n",
+    "\n",
     "def draw_rectangle():\n",
-    "    canvas.create_rectangle(50,100,200,200,fill='blue')\n",
+    "    canvas.create_rectangle(50, 100, 200, 200, fill='blue')\n",
+    "\n",
+    "\n",
     "def draw_oval():\n",
-    "    canvas.create_oval(50,250,200,350,fill ='green')\n",
+    "    canvas.create_oval(50, 250, 200, 350, fill='green')\n",
+    "\n",
+    "\n",
     "window = tk.Tk()\n",
     "window.title('drawing shapes')\n",
     "window.geometry('500x500')\n",
     "\n",
-    "canvas = tk.Canvas(width = 400,height = 400,bg = 'yellowgreen')\n",
+    "canvas = tk.Canvas(width=400, height=400, bg='yellowgreen')\n",
     "canvas.pack()\n",
     "\n",
-    "line_button = tk.Button(text = 'line',command = draw_line)\n",
+    "line_button = tk.Button(text='line', command=draw_line)\n",
     "line_button.pack()\n",
     "\n",
-    "rectangle_button = tk.Button(text = 'rectangle',command = draw_rectangle)\n",
+    "rectangle_button = tk.Button(text='rectangle', command=draw_rectangle)\n",
     "rectangle_button.pack()\n",
     "\n",
-    "oval_button = tk.Button(text = 'oval',command = draw_oval)\n",
+    "oval_button = tk.Button(text='oval', command=draw_oval)\n",
     "oval_button.pack()\n",
     "window.mainloop()"
    ]
@@ -199,7 +212,7 @@
    "id": "d72af8aa",
    "metadata": {},
    "source": [
-    "WAP that extends the class Employee. Derive two classes Manager and Team Leader from Employee class. Display all the details of the employee working under a particular Manager and \n"
+    "WAP that extends the class Employee. Derive two classes Manager and Team Leader from Employee class. Display all the details of the employee working under a particular Manager and\n"
    ]
   },
   {
@@ -250,16 +263,17 @@
    "source": [
     "\n",
     "class Employee:\n",
-    "  d = {chr(i):[] for i in range(65,91)}\n",
-    "  def __init__(self, name, emp_id, salary):\n",
+    "    d = {chr(i): [] for i in range(65, 91)}\n",
+    "\n",
+    "    def __init__(self, name, emp_id, salary):\n",
     "        self.name = name\n",
     "        self.emp_id = emp_id\n",
     "        self.salary = salary\n",
-    "  def team(self,obj,team):         \n",
-    "    self.d[team].append(obj)\n",
-    "    \n",
     "\n",
-    "         \n",
+    "    def team(self, obj, team):\n",
+    "        self.d[team].append(obj)\n",
+    "\n",
+    "\n",
     "class Manager(Employee):\n",
     "    def __init__(self, name, emp_id, salary, team):\n",
     "        super().__init__(name, emp_id, salary)\n",
@@ -276,12 +290,13 @@
     "            print(f\"{emp.name} \\nID: {emp.emp_id} \\nsalary: {emp.salary}\")\n",
     "            print()\n",
     "\n",
+    "\n",
     "class TeamLeader(Employee):\n",
     "    def __init__(self, name, emp_id, salary, team):\n",
     "        super().__init__(name, emp_id, salary)\n",
     "        self.team = team\n",
     "        self.designation = 'Team Leader'\n",
-    " \n",
+    "\n",
     "    def display_team(self):\n",
     "        print(f\"{self.name} \\nID: {self.emp_id} \\nsalary: {self.salary} \\ndesignation: {self.designation} \\nteam: {self.team}\")\n",
     "        print()\n",
@@ -291,14 +306,16 @@
     "        for emp in self.d[self.team]:\n",
     "            print(f\"{emp.name} \\nID: {emp.emp_id} \\nsalary: {emp.salary}\")\n",
     "            print()\n",
+    "\n",
+    "\n",
     "emp1 = Employee(\"John\", 1, 50000)\n",
-    "emp1.team(emp1,'A')\n",
+    "emp1.team(emp1, 'A')\n",
     "emp2 = Employee(\"Jane\", 2, 60000)\n",
-    "emp2.team(emp2,'A')\n",
+    "emp2.team(emp2, 'A')\n",
     "emp3 = Employee(\"Bob\", 3, 55000)\n",
-    "emp3.team(emp3,'B')\n",
+    "emp3.team(emp3, 'B')\n",
     "emp4 = Employee(\"Alice\", 4, 65000)\n",
-    "emp4.team(emp4,'B')\n",
+    "emp4.team(emp4, 'B')\n",
     "mgr = Manager(\"Mike\", 5, 75000, 'A')\n",
     "tl = TeamLeader(\"Tom\", 6, 70000, 'B')\n",
     "\n",
@@ -312,10 +329,9 @@
    "id": "b3b533cf",
    "metadata": {},
    "source": [
-    "\n",
     "Write a Program to create a series from a list, numpy array and dict.\n",
     "list_data = [10, 20, 30, 40, 50]\n",
-    "array_data = ([0.5, 0.8, 1.2, 1.5, 2.0])"
+    "array_data = ([0.5, 0.8, 1.2, 1.5, 2.0])\n"
    ]
   },
   {
@@ -354,18 +370,18 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "l_d = [10,20,30,40,50]\n",
+    "l_d = [10, 20, 30, 40, 50]\n",
     "l_s = pd.Series(l_d)\n",
     "print('Series from list')\n",
     "print(l_s)\n",
-    "a_d = np.array([0.5,0.8,1.2,1.5,2.0])\n",
+    "a_d = np.array([0.5, 0.8, 1.2, 1.5, 2.0])\n",
     "a_s = pd.Series(a_d)\n",
     "print('Series from arrays')\n",
     "print(a_s)\n",
-    "d_d = {'A':100,'B':200,'C':300,'D':400}\n",
+    "d_d = {'A': 100, 'B': 200, 'C': 300, 'D': 400}\n",
     "d_s = pd.Series(d_d)\n",
     "print('Series from dictionary')\n",
-    "print(d_s)\n"
+    "print(d_s)"
    ]
   },
   {
@@ -374,8 +390,7 @@
    "id": "0b4ff117",
    "metadata": {},
    "source": [
-    "\n",
-    "What are ways of creating 1D, 2D and 3D arrays in NumPy? Give Examples"
+    "What are ways of creating 1D, 2D and 3D arrays in NumPy? Give Examples\n"
    ]
   },
   {
@@ -383,7 +398,7 @@
    "id": "f258e35b",
    "metadata": {},
    "source": [
-    "in 1- D"
+    "in 1- D\n"
    ]
   },
   {
@@ -404,7 +419,7 @@
     "import numpy as np\n",
     "\n",
     "arr = np.array([1, 2, 3, 4, 5])\n",
-    "print(arr)\n"
+    "print(arr)"
    ]
   },
   {
@@ -427,7 +442,7 @@
     "import numpy as np\n",
     "\n",
     "arr = np.arange(1, 6)  # Generates array from 1 to 5\n",
-    "print(arr)\n"
+    "print(arr)"
    ]
   },
   {
@@ -435,7 +450,7 @@
    "id": "80aed0e1",
    "metadata": {},
    "source": [
-    "2-D"
+    "2-D\n"
    ]
   },
   {
@@ -457,7 +472,7 @@
     "import numpy as np\n",
     "\n",
     "arr = np.array([[1, 2, 3], [4, 5, 6]])\n",
-    "print(arr)\n"
+    "print(arr)"
    ]
   },
   {
@@ -480,7 +495,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "arr = np.zeros((2, 3)) \n",
+    "arr = np.zeros((2, 3))\n",
     "print(arr)"
    ]
   },
@@ -489,7 +504,7 @@
    "id": "2c51d9a4",
    "metadata": {},
    "source": [
-    "3-D"
+    "3-D\n"
    ]
   },
   {
@@ -516,7 +531,7 @@
     "import numpy as np\n",
     "\n",
     "arr = np.ones((2, 3, 4))\n",
-    "print(arr)\n"
+    "print(arr)"
    ]
   },
   {
@@ -525,8 +540,7 @@
    "id": "583136da",
    "metadata": {},
    "source": [
-    "\n",
-    "Write a program that creates an iterator to print squares of numbers"
+    "Write a program that creates an iterator to print squares of numbers\n"
    ]
   },
   {
@@ -554,18 +568,22 @@
    ],
    "source": [
     "class Square_Iterator:\n",
-    "    def __init__(self,limit):\n",
+    "    def __init__(self, limit):\n",
     "        self.limit = limit\n",
+    "\n",
     "    def __iter__(self):\n",
     "        self.a = 1\n",
     "        return self\n",
+    "\n",
     "    def __next__(self):\n",
-    "        if self.limit>=self.a:\n",
+    "        if self.limit >= self.a:\n",
     "            x = self.a\n",
-    "            self.a+=1\n",
+    "            self.a += 1\n",
     "            return x**2\n",
     "        else:\n",
     "            raise StopIteration\n",
+    "\n",
+    "\n",
     "S = Square_Iterator(10)\n",
     "for i in S:\n",
     "    print(i)"
@@ -577,13 +595,12 @@
    "id": "a2cbd1f8",
    "metadata": {},
    "source": [
-    "\n",
-    "Create a class Employee that keeps a track of the number of employees in an organization and also stores their name, designation and salary details. \n",
-    " a) Write a method called getdata to take input (name, designation,\n",
-    "salary) from user. \n",
-    " b) Write a method called average to find average salary of all the\n",
-    "employees in the organization. \n",
-    " c) Write a method called display to print all the information of an"
+    "Create a class Employee that keeps a track of the number of employees in an organization and also stores their name, designation and salary details.\n",
+    "a) Write a method called getdata to take input (name, designation,\n",
+    "salary) from user.\n",
+    "b) Write a method called average to find average salary of all the\n",
+    "employees in the organization.\n",
+    "c) Write a method called display to print all the information of an\n"
    ]
   },
   {
@@ -594,22 +611,27 @@
    "outputs": [],
    "source": [
     "class Employee:\n",
-    "  number_of_employees = 0\n",
-    "  total_salary = 0 \n",
-    "  average = 0\n",
-    "  def __init__(self):\n",
-    "    Employee.number_of_employees+=1\n",
-    "  def getdata(self):\n",
-    "    self.name = input(\"Enter employee name: \")\n",
-    "    self.designation = input(\"Enter employee designation: \")\n",
-    "    self.salary = int(input(\"Enter employee salary: \"))\n",
-    "    \n",
-    "    Employee.total_salary += self.salary\n",
-    "    Employee.average = Employee.total_salary/Employee.number_of_employees\n",
-    "  def display(self):\n",
-    "    print(self.name,'details :')\n",
-    "    print('Designation :',self.designation)\n",
-    "    print('Salary :',self.salary)\n",
+    "    number_of_employees = 0\n",
+    "    total_salary = 0\n",
+    "    average = 0\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        Employee.number_of_employees += 1\n",
+    "\n",
+    "    def getdata(self):\n",
+    "        self.name = input(\"Enter employee name: \")\n",
+    "        self.designation = input(\"Enter employee designation: \")\n",
+    "        self.salary = int(input(\"Enter employee salary: \"))\n",
+    "\n",
+    "        Employee.total_salary += self.salary\n",
+    "        Employee.average = Employee.total_salary/Employee.number_of_employees\n",
+    "\n",
+    "    def display(self):\n",
+    "        print(self.name, 'details :')\n",
+    "        print('Designation :', self.designation)\n",
+    "        print('Salary :', self.salary)\n",
+    "\n",
+    "\n",
     "E = Employee()\n",
     "E.getdata()\n",
     "E.display()\n",
@@ -622,10 +644,7 @@
    "id": "e4be2462",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "Remove all rows with NULL values: USING NUMPY AND PANDAS OF YOUR DATASET WHICH YOU HAVE"
+    "Remove all rows with NULL values: USING NUMPY AND PANDAS OF YOUR DATASET WHICH YOU HAVE\n"
    ]
   },
   {
@@ -720,11 +739,10 @@
    "id": "4563d483",
    "metadata": {},
    "source": [
-    "\n",
     "Write a program to count number of missing values in each column.\n",
     "{'Column1': [1, 2, 3, None, 5],\n",
-    "        'Column2': [6, None, 8, 9, 10],\n",
-    "        'Column3': [11, 12, None, 14, 15]}"
+    "'Column2': [6, None, 8, 9, 10],\n",
+    "'Column3': [11, 12, None, 14, 15]}\n"
    ]
   },
   {
@@ -748,7 +766,8 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "d = {'column_1': [1,2,3,None,5],'column_2': [6,None,8,9,10],'column_3':[11,12,None,14,15]}\n",
+    "d = {'column_1': [1, 2, 3, None, 5], 'column_2': [\n",
+    "    6, None, 8, 9, 10], 'column_3': [11, 12, None, 14, 15]}\n",
     "df = pd.DataFrame(d)\n",
     "print(df.isnull().sum(axis=0))"
    ]
@@ -758,7 +777,8 @@
    "id": "8e7e7495",
    "metadata": {},
    "source": [
-    "# \n",
+    "#\n",
+    "\n",
     "Write a program to implement default constructor, parameterized constructor, and destructor.\n"
    ]
   },
@@ -781,12 +801,16 @@
    ],
    "source": [
     "class Person:\n",
-    "    def __init__(self,name):\n",
+    "    def __init__(self, name):\n",
     "        self.name = name\n",
+    "\n",
     "    def __del__(self):\n",
     "        print(\"object deleted\")\n",
+    "\n",
     "    def display(self):\n",
     "        print(self.name)\n",
+    "\n",
+    "\n",
     "p = Person('Raja')\n",
     "p.display()\n",
     "del p"
@@ -810,8 +834,11 @@
     "class Person:\n",
     "    def __init__(self):\n",
     "        self.name = 'Rachit'\n",
+    "\n",
     "    def display(self):\n",
     "        print(self.name)\n",
+    "\n",
+    "\n",
     "p = Person()\n",
     "p.display()"
    ]
