--- a/Day4revesion.ipynb
+++ b/Day4revesion.ipynb
@@ -29,10 +29,10 @@
    ],
    "source": [
     "import numpy as np\n",
-    "a = np.array([[1,2,3,4],[5,6,7,8],[9,10,11,12]])\n",
+    "a = np.array([[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]])\n",
     "new_a = a*4\n",
     "print(new_a)\n",
-    "new_a.shape = (4,3)\n",
+    "new_a.shape = (4, 3)\n",
     "print(new_a)"
    ]
   },
@@ -92,11 +92,12 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "city = ('Pune','Etawah','Meerut','Gorakhpur','Prayagraj','Bhopal')\n",
-    "population = [4,7,1,3,2,5]\n",
-    "explode = (0.2,0,0,0,0,0)\n",
-    "colors = ['yellowgreen','pink','purple','grey','red','orange']\n",
-    "plt.pie(population,explode=explode,labels=city,colors=colors,autopct='%1.1f%%',shadow=True,startangle=120)\n",
+    "city = ('Pune', 'Etawah', 'Meerut', 'Gorakhpur', 'Prayagraj', 'Bhopal')\n",
+    "population = [4, 7, 1, 3, 2, 5]\n",
+    "explode = (0.2, 0, 0, 0, 0, 0)\n",
+    "colors = ['yellowgreen', 'pink', 'purple', 'grey', 'red', 'orange']\n",
+    "plt.pie(population, explode=explode, labels=city, colors=colors,\n",
+    "        autopct='%1.1f%%', shadow=True, startangle=120)\n",
     "plt.axis('equal')\n",
     "plt.show()"
    ]
@@ -147,7 +148,7 @@
     "import matplotlib.pyplot as plt\n",
     "c = pandas.read_csv(r'E:\\DAY2\\Data\\Book1.csv')\n",
     "print(c)\n",
-    "res = seaborn.scatterplot(x = 'Name', y = 'Age',data = c)\n",
+    "res = seaborn.scatterplot(x='Name', y='Age', data=c)\n",
     "plt.show()"
    ]
   }
