--- a/Day5.ipynb
+++ b/Day5.ipynb
@@ -8,12 +8,12 @@
    "source": [
     "from tkinter import *\n",
     "master = Tk()\n",
-    "Label(master,text='First Name').grid(row=0)\n",
-    "Label(master,text='Last Name').grid(row=1)\n",
-    "e1=Entry(master)\n",
-    "e2=Entry(master)\n",
-    "e1.grid(row=0,column=1)\n",
-    "e2.grid(row=1,column=1)\n",
+    "Label(master, text='First Name').grid(row=0)\n",
+    "Label(master, text='Last Name').grid(row=1)\n",
+    "e1 = Entry(master)\n",
+    "e2 = Entry(master)\n",
+    "e1.grid(row=0, column=1)\n",
+    "e2.grid(row=1, column=1)\n",
     "mainloop()"
    ]
   },
@@ -24,10 +24,14 @@
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
-    "window=tk.Tk('Auto Close Window')\n",
+    "window = tk.Tk('Auto Close Window')\n",
+    "\n",
+    "\n",
     "def close_window():\n",
     "    window.destroy()\n",
-    "window.after(5000,close_window)\n",
+    "\n",
+    "\n",
+    "window.after(5000, close_window)\n",
     "window.mainloop()"
    ]
   },
@@ -37,23 +41,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tkinter as tk \n",
+    "import tkinter as tk\n",
+    "\n",
+    "\n",
     "def calculate():\n",
     "    try:\n",
-    "        expression=entry.get()\n",
-    "        result = eval(expression) \n",
+    "        expression = entry.get()\n",
+    "        result = eval(expression)\n",
     "        output_label.config(text='Result'+str(result))\n",
     "    except Exception as e:\n",
     "        output_label.config(text='Error:'+str(e))\n",
-    "window=tk.Tk()\n",
+    "\n",
+    "\n",
+    "window = tk.Tk()\n",
     "window.title(\"Arithmatic Calculator\")\n",
-    "entry = tk.Tk() \n",
+    "entry = tk.Tk()\n",
     "window.title(\"Arithmatic Calculator\")\n",
-    "entry=tk.Entry(window,width=30) \n",
-    "entry.pack() \n",
-    "calculate_button=tk.Button(window,text='Calculate',command=calculate)\n",
+    "entry = tk.Entry(window, width=30)\n",
+    "entry.pack()\n",
+    "calculate_button = tk.Button(window, text='Calculate', command=calculate)\n",
     "calculate_button.pack()\n",
-    "output_label=tk.Label(window,text='')    \n",
+    "output_label = tk.Label(window, text='')\n",
     "output_label.pack()\n",
     "window.mainloop()"
    ]
@@ -81,21 +89,30 @@
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
+    "\n",
+    "\n",
     "def draw_line():\n",
-    "    canvas.create_line(50,50,200,50,fill='red')\n",
+    "    canvas.create_line(50, 50, 200, 50, fill='red')\n",
+    "\n",
+    "\n",
     "def draw_rectangle():\n",
-    "    canvas.create_rectangle(50,100,200,200,fill='blue')\n",
+    "    canvas.create_rectangle(50, 100, 200, 200, fill='blue')\n",
+    "\n",
+    "\n",
     "def draw_oval():\n",
-    "    canvas.create_oval(50,250,200,300,fill='green')\n",
+    "    canvas.create_oval(50, 250, 200, 300, fill='green')\n",
+    "\n",
+    "\n",
     "window = tk.Tk()\n",
     "window.title('Drawing Shapes')\n",
-    "canvas = tk.Canvas(window,width=250,height=400)\n",
+    "canvas = tk.Canvas(window, width=250, height=400)\n",
     "canvas.pack()\n",
-    "line_button=tk.Button(window,text='Draw Line',command=draw_line)\n",
+    "line_button = tk.Button(window, text='Draw Line', command=draw_line)\n",
     "line_button.pack()\n",
-    "rectangle_button = tk.Button(window,text='Draw Rectangle',command=draw_rectangle)\n",
+    "rectangle_button = tk.Button(\n",
+    "    window, text='Draw Rectangle', command=draw_rectangle)\n",
     "rectangle_button.pack()\n",
-    "oval_button = tk.Button(window,text='Draw Oval',command=draw_oval)\n",
+    "oval_button = tk.Button(window, text='Draw Oval', command=draw_oval)\n",
     "oval_button.pack()\n",
     "window.mainloop()"
    ]
@@ -119,9 +136,13 @@
     "from tkinter import messagebox\n",
     "top = tkinter.Tk()\n",
     "top.title(\"Rachit Tyagi\")\n",
+    "\n",
+    "\n",
     "def helloCallBack():\n",
-    "    messagebox.showinfo(\"Hello Python\",\"Hello World\")\n",
-    "B=tkinter.Button(top,text=\"Hello\",command=helloCallBack)\n",
+    "    messagebox.showinfo(\"Hello Python\", \"Hello World\")\n",
+    "\n",
+    "\n",
+    "B = tkinter.Button(top, text=\"Hello\", command=helloCallBack)\n",
     "B.pack()\n",
     "top.mainloop()"
    ]
@@ -136,27 +157,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tkinter as tk \n",
+    "import tkinter as tk\n",
+    "\n",
+    "\n",
     "def calculate():\n",
     "    try:\n",
-    "        expression=entry.get()\n",
-    "        result = eval(expression) \n",
+    "        expression = entry.get()\n",
+    "        result = eval(expression)\n",
     "        output_label.config(text='Result'+str(result))\n",
     "    except Exception as e:\n",
     "        output_label.config(text='Error:'+str(e))\n",
-    "window=tk.Tk()\n",
+    "\n",
+    "\n",
+    "window = tk.Tk()\n",
     "window.title(\"Arithmatic Calculator\")\n",
-    "entry = tk.Tk() \n",
+    "entry = tk.Tk()\n",
     "window.title(\"Arithmatic Calculator\")\n",
-    "entry=tk.Entry(window,width=30) \n",
-    "entry.pack() \n",
-    "calculate_button=tk.Button(window,text='Calculate',command=calculate)\n",
+    "entry = tk.Entry(window, width=30)\n",
+    "entry.pack()\n",
+    "calculate_button = tk.Button(window, text='Calculate', command=calculate)\n",
     "calculate_button.pack()\n",
-    "output_label=tk.Label(window,text='')    \n",
+    "output_label = tk.Label(window, text='')\n",
     "output_label.pack()\n",
     "window.mainloop()"
    ]
@@ -177,9 +202,9 @@
    "source": [
     "from tkinter import *\n",
     "master = Tk()\n",
-    "Label(master,text='Entry Form').grid(row=0)\n",
-    "e1=Entry(master)\n",
-    "e1.grid(row=0,column=1)\n",
+    "Label(master, text='Entry Form').grid(row=0)\n",
+    "e1 = Entry(master)\n",
+    "e1.grid(row=0, column=1)\n",
     "mainloop()"
    ]
   },
@@ -198,13 +223,21 @@
    "source": [
     "import tkinter as tk\n",
     "from tkinter import messagebox\n",
+    "\n",
+    "\n",
     "def draw_line():\n",
     "    canvas.create_line(50, 50, 200, 50, width=2, fill='blue')\n",
+    "\n",
+    "\n",
     "def print_message():\n",
     "    messagebox.showinfo(\"Message\", \"Hello, World!\")\n",
+    "\n",
+    "\n",
     "def submit_form():\n",
     "    text = entry.get()\n",
     "    messagebox.showinfo(\"Form Data\", f\"Submitted Text: {text}\")\n",
+    "\n",
+    "\n",
     "window = tk.Tk()\n",
     "window.title(\"Button Actions\")\n",
     "canvas = tk.Canvas(window, width=300, height=300)\n",
@@ -237,11 +270,15 @@
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
+    "\n",
+    "\n",
     "def press(num):\n",
     "    global expression\n",
     "    expression = expression + str(num)\n",
     "    entry.delete(0, tk.END)\n",
     "    entry.insert(tk.END, expression)\n",
+    "\n",
+    "\n",
     "def equalpress():\n",
     "    try:\n",
     "        global expression\n",
@@ -253,15 +290,19 @@
     "        entry.delete(0, tk.END)\n",
     "        entry.insert(tk.END, \"Error: \" + str(e))\n",
     "        expression = \"\"\n",
+    "\n",
+    "\n",
     "def clear():\n",
     "    global expression\n",
     "    entry.delete(0, tk.END)\n",
     "    expression = \"\"\n",
+    "\n",
+    "\n",
     "window = tk.Tk()\n",
     "window.title(\"Large Calculator\")\n",
-    "window.color=\"lightblue\"\n",
+    "window.color = \"lightblue\"\n",
     "expression = \"\"\n",
-    "entry = tk.Entry(window, font=(\"Arial\", 20), width=30,bg=\"green\")\n",
+    "entry = tk.Entry(window, font=(\"Arial\", 20), width=30, bg=\"green\")\n",
     "entry.grid(row=0, column=0, columnspan=4, padx=10, pady=10)\n",
     "buttons = [\n",
     "    '7', '8', '9', '/',\n",
@@ -272,16 +313,19 @@
     "row = 1\n",
     "col = 0\n",
     "for button in buttons:\n",
-    "    btn = tk.Button(window, text=button, fg='black', bg='red', font=(\"Arial\", 16), height=2, width=8)\n",
+    "    btn = tk.Button(window, text=button, fg='black', bg='red',\n",
+    "                    font=(\"Arial\", 16), height=2, width=8)\n",
     "    btn.grid(row=row, column=col, padx=5, pady=5)\n",
     "    btn.config(command=lambda num=button: press(num))\n",
     "    col += 1\n",
     "    if col > 3:\n",
     "        col = 0\n",
     "        row += 1\n",
-    "clear_button = tk.Button(window, text='Clear', fg='black', bg='red', font=(\"Arial\", 16), height=2, width=8, command=clear)\n",
+    "clear_button = tk.Button(window, text='Clear', fg='black', bg='red', font=(\n",
+    "    \"Arial\", 16), height=2, width=8, command=clear)\n",
     "clear_button.grid(row=row, column=col, padx=5, pady=5)\n",
-    "equal_button = tk.Button(window, text='=', fg='black', bg='red', font=(\"Arial\", 16), height=2, width=8, command=equalpress)\n",
+    "equal_button = tk.Button(window, text='=', fg='black', bg='red', font=(\n",
+    "    \"Arial\", 16), height=2, width=8, command=equalpress)\n",
     "equal_button.grid(row=row+1, column=col, padx=5, pady=5)\n",
     "window.mainloop()"
    ]
@@ -318,10 +362,12 @@
    ],
    "source": [
     "def counter():\n",
-    "    i=1\n",
-    "    while(i<=10):\n",
+    "    i = 1\n",
+    "    while (i <= 10):\n",
     "        yield i\n",
-    "        i+=1\n",
+    "        i += 1\n",
+    "\n",
+    "\n",
     "for i in counter():\n",
     "    print(i)"
    ]
@@ -360,6 +406,8 @@
     "def check_odd_even(numbers):\n",
     "    for num in numbers:\n",
     "        yield num, \"Even\" if num % 2 == 0 else \"Odd\"\n",
+    "\n",
+    "\n",
     "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
     "result_generator = check_odd_even(numbers)\n",
     "for num, status in result_generator:\n",
@@ -398,10 +446,12 @@
    ],
    "source": [
     "def counter():\n",
-    "    i=1\n",
-    "    while(i<=10):\n",
+    "    i = 1\n",
+    "    while (i <= 10):\n",
     "        yield (i**2)\n",
-    "        i+=1\n",
+    "        i += 1\n",
+    "\n",
+    "\n",
     "for i in counter():\n",
     "    print(i)"
    ]
@@ -430,8 +480,10 @@
    "source": [
     "def even_squares(x):\n",
     "    for i in range(x):\n",
-    "        if i**2%2==0:\n",
+    "        if i**2 % 2 == 0:\n",
     "            yield i**2\n",
+    "\n",
+    "\n",
     "print(list(even_squares(10)))"
    ]
   },
@@ -484,7 +536,7 @@
     "obj3 = MyClass()\n",
     "obj3.param1 = \"OpenAI\"\n",
     "obj3.param2 = \"GPT-3.5\"\n",
-    "obj3.display_params()\n"
+    "obj3.display_params()"
    ]
   },
   {
@@ -543,7 +595,7 @@
     "my_dog = Dog(\"Buddy\", \"Canis lupus familiaris\", \"Labrador Retriever\")\n",
     "\n",
     "# Call the display_info method to display the information\n",
-    "my_dog.display_info()\n"
+    "my_dog.display_info()"
    ]
   }
  ],
